fix image ratio on mobile

--- a/src/inc/style.css
+++ b/src/inc/style.css
@@ -23,6 +23,7 @@ html, body, .full-height {
 
 img {
   max-width: 100%;
+  height: 100%;
   vertical-align: middle;
   border: 0;
 }
